# Azure-SharePoint-AI-Search

./: Azure.http  Azure_SDK.py  README.md  chatbot.py  config.py  main.py  pyproject.toml  requirements.txt
sharepoint_update/: fastWeb.py  test_sp.py  test_webhook.py
